# TRTC_Flutter

./: .gitignore  API.md  README-zh_CN.md  README.md  pubspec.yaml  快速集成(Flutter).md
SDK/: .gitignore  COMMON_ISSUE.md  README-zh_CN.md  README.md  dartdoc_options.yaml  pubspec.yaml
SDK/windows/: CMakeLists.txt  tencent_trtc_cloud_plugin.cpp
SDK/windows/include/: ITXCopyrightedMedia.h  ITXLiteAVLocalRecord.h  TXLiteAVBase.h  TXLiteAVCode.h  macros.h
SDK/windows/include/Live2/: V2TXLiveCode.hpp  V2TXLiveDef.hpp  V2TXLivePlayer.hpp  V2TXLivePremier.hpp  V2TXLivePusher.hpp
SDK/windows/include/TRTC/: IDeprecatedTRTCCloud.h  ITRTCCloud.h  ITRTCStatistics.h  ITXAudioEffectManager.h  ITXDeviceManager.h  ITXLocalMediaTranscoding.h  TRTCCloudCallback.h  TRTCTypeDef.h
SDK/windows/include/Vod/: ITXVodPlayer.h  ITXVodPlayerCallback.h
SDK/windows/include/tencent_trtc_cloud/: tencent_trtc_cloud_plugin.h
SDK/windows/lib/: liteav.lib
SDK/windows/src/: texture_view_factory.cpp  texture_view_factory.h  trtc_cloud.cpp  trtc_cloud.h  trtc_cloud_callback.cpp
TRTC-API-Example/: .gitignore  README.en.md  README.md  README_Alive.md  README_Alive_zh-CN.md  README_Beauty_zh-CN.md  README_zh-CN.md  pubspec.yaml
TRTC-Simple-Demo/: .gitignore  .metadata  API-zn_CH.md  API.md  COMMON_ISSUE.md  README-zh_CN.md  README-zn_CH.md  README.md  pubspec.yaml
ios/: Podfile  TXLiteAVSDK_TRTC.podspec
lib/: main.dart
web/: BeautyManagerWrapper.2.0.0-dev.0.0.1.bundle.js  BeautyManagerWrapper.2.0.0-dev.0.0.2.bundle.js  JsGenerateTestUserSig.2.0.0-dev.0.0.1.bundle.js  index.html  (+2 more)
(+1974 files in other folders)
